--- a/menu.html
+++ b/menu.html
@@ -84,7 +84,7 @@
 				<a class="nav-link text-center" data-toggle="tab" href="#bar" role="tab" aria-controls="contact" aria-selected="false" style="margin-right: 0px;">BAR</a>
 			</li>
 		</ul>
-		
+
 		<div class="tab-content">
 			<!--DESAYUNO-->
 			<div class="tab-pane container active" id="desayunos">
@@ -2609,7 +2609,7 @@
 								<div class="flex-rz space-between mb-1--5">
 									<p class="name arvo fz-1--1">TÉ CHAI LATTE</p>
 									<span class="line-1"></span>
-									<p class="name roboto-condensed"><span class="name oswald brown-light-text pr-5px">(calienet o frío)</span><span class="mustache-text pr-5px">325 ml</span>$65</p>
+									<p class="name roboto-condensed"><span class="name oswald brown-light-text pr-5px">(caliente o frío)</span><span class="mustache-text pr-5px">325 ml</span>$65</p>
 								</div>
 
 								<div class="flex-rz space-between">
@@ -2959,7 +2959,7 @@
 					<!--OTRAS-->
 					<div class="col-12 col-md-4 px-0 text-center">
 						<a class="collapse-button" data-toggle="collapse" href="#collapseOtras" aria-expanded="true">
-							<img class="w-70 my-2em" src="https://pendulo.com/archivos/otras.png" alt="">
+							<img class="w-70 my-2em" src="https://pendulo.com/archivos/otras-titulo.png" alt="">
 						</a>
 						<div class="text-left p1 fz-1--5">
 							<div class="collapse show" id="collapseOtras">
