preguntas frecuentes y nuevo menú bar

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 				</div>
 				<div class="col-md-3 p0 text-left-rz">
 					<p class="text-1" id="ac"><strong>ATENCIÓN AL CLIENTE</strong></p>
-					<a id="pf" target="blank" href="https://pendulo.com/especial/preguntas">Preguntas frecuentes</a>
+					<a id="pf" target="blank" href="https://pendulo.com/especial/preguntas-frecuentes-sobre-restaurante/358/">Preguntas frecuentes</a>
 					<a id="f" target="blank" href="https://pendulo.com/especial/facturacion">Facturación</a>
 				</div>
 				<div class="col-md-12 mt-3em">
