--- a/menu.html
+++ b/menu.html
@@ -5308,7 +5308,7 @@
 									</div>
 								</div>
 							</div>
-	
+
 							<div class="col-md-4 text-center">
 								<!--CERVEZAS ARTESANALES E IMPORTADAS-->
 								<a class="collapse-button" data-toggle="collapse" href="#collapseCervezas2"
@@ -5326,7 +5326,7 @@
 													ml</span>$78</p>
 										</div>
 										<p class="roboto-condensed brown-text">MÉXICO LAGER ESTILO JAPONÉS CON ARROZ</p>
-	
+
 										<div class="flex-rz space-between mt-1em">
 											<p class="name arvo fz-1--1">INDECOROSA</p>
 											<span class="line-1"></span>
@@ -5334,7 +5334,7 @@
 													ml</span>$82</p>
 										</div>
 										<p class="roboto-condensed brown-text">MÉXICO INDIA PALE ALE</p>
-	
+
 										<div class="flex-rz space-between mt-1em">
 											<p class="name arvo">RORSCHACH</p>
 											<span class="line-1"></span>
@@ -5342,7 +5342,7 @@
 													ml</span>$66</p>
 										</div>
 										<p class="roboto-condensed brown-text">MÉXICO STOUT OSCURA</p>
-	
+
 										<div class="flex-rz space-between mt-1em">
 											<p class="name arvo fz-1--1">STELLA ARTOIS</p>
 											<span class="line-1"></span>
@@ -5386,7 +5386,7 @@
 											cubana o natural.</p>
 									</div>
 								</div>
-								
+
 							</div>
 						</div>
 					</div>
@@ -5418,7 +5418,7 @@
 													ml</span>$132</p>
 										</div>
 										<p class="roboto-condensed brown-text">MÉXICO</p>
-	
+
 										<div class="flex-rz space-between mt-1em">
 											<p class="name arvo fz-1--1">CHENIN BLANC L.A. CETTO</p>
 											<span class="line-1"></span>
@@ -5430,7 +5430,7 @@
 									</div>
 								</div>
 							</div>
-	
+
 							<div class="col-md-4 text-center">
 								<!--TINTOS-->
 								<a class="collapse-button" data-toggle="collapse" href="#collapseVinos2"
@@ -5446,7 +5446,7 @@
 													ml</span>240</p>
 										</div>
 										<p class="roboto-condensed brown-text">MÉXICO</p>
-	
+
 										<div class="flex-rz space-between mt-1em">
 											<p class="name arvo fz-1--1">ALTOTINTO ANÉCDOTA</p>
 											<span class="line-1"></span>
@@ -5454,7 +5454,7 @@
 													ml</span>$178</p>
 										</div>
 										<p class="roboto-condensed brown-text">MÉXICO</p>
-	
+
 										<div class="flex-rz space-between mt-1em">
 											<p class="name arvo">MERLOT L.A. CETTO</p>
 											<span class="line-1"></span>
@@ -5466,7 +5466,7 @@
 									</div>
 								</div>
 							</div>
-	
+
 							<div class="col-md-4 text-center">
 								<!--ROSADOS-->
 								<a class="collapse-button" data-toggle="collapse" href="#collapseVinos3"
@@ -5485,7 +5485,7 @@
 									</div>
 								</div>
 							</div>
-	
+
 							<div class="col-md-4 text-center">
 								<!--ESPUMOSOS-->
 								<a class="collapse-button" data-toggle="collapse" href="#collapseVinos4"
@@ -5504,7 +5504,7 @@
 									</div>
 								</div>
 							</div>
-	
+
 							<div class="col-md-4 text-center">
 								<!--COCTELES CON VINO-->
 								<a class="collapse-button" data-toggle="collapse" href="#collapseVinos5"
@@ -5526,20 +5526,13 @@
 						</div>
 					</div>
 
-					<!--GINEBRÆS-->
 					<div class="row">
-						<div class="col-md-4"></div>
+						<!--GINEBRÆS-->
 						<div class="col-11 col-md-4 px-0 text-center collapse-button">
 							<a class="collapse-button" data-toggle="collapse" href="#collapseGinebras" aria-expanded="true">
 								<img class="w-70 my-2em" src="https://pendulo.com/archivos/ginebras.png" alt="">
 							</a>
-						</div>
-						<div class="col-md-4"></div>
-					</div>
-					<div class="collapse show" id="collapseGinebras">
-						<div class="row">
-							<div class="col-md-4"></div>
-							<div class="col-md-4 text-center">
+							<div class="collapse show" id="collapseGinebras">
 								<div class="text-left p1 fz-1--5">
 									<div class="flex-rz space-between">
 										<p class="name arvo fz-1--1">TANQUERAY</p>
@@ -5554,24 +5547,14 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-md-4"></div>
 						</div>
-					</div>
 
-					<!--ROÆNES-->
-					<div class="row">
-						<div class="col-md-4"></div>
+						<!--ROÆNES-->
 						<div class="col-11 col-md-4 px-0 text-center collapse-button">
 							<a class="collapse-button" data-toggle="collapse" href="#collapseRones" aria-expanded="true">
 								<img class="w-50 my-2em" style="max-width: 35%;" src="https://pendulo.com/archivos/rones.png" alt="">
 							</a>
-						</div>
-						<div class="col-md-4"></div>
-					</div>
-					<div class="collapse show" id="collapseRones">
-						<div class="row">
-							<div class="col-md-4"></div>
-							<div class="col-md-4 text-center">
+							<div class="collapse show" id="collapseRones">
 								<div class="text-left p1 fz-1--5">
 									<div class="flex-rz space-between">
 										<p class="name arvo fz-1--1">BACARDÍ BLANCO</p>
@@ -5604,25 +5587,15 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-md-4"></div>
 						</div>
-					</div>
 
-					<!--VODKÆS-->
-					<div class="row">
-						<div class="col-md-4"></div>
+						<!--VODKÆS-->
 						<div class="col-11 col-md-4 px-0 text-center collapse-button">
 							<a class="collapse-button" data-toggle="collapse" href="#collapseVodkas" aria-expanded="true">
 								<img class="w-50 my-2em" style="max-width: 35%;"
 									src="https://pendulo.com/archivos/vodkas.png" alt="">
 							</a>
-						</div>
-						<div class="col-md-4"></div>
-					</div>
-					<div class="collapse show" id="collapseVodkas">
-						<div class="row">
-							<div class="col-md-4"></div>
-							<div class="col-md-4 text-center">
+							<div class="collapse show" id="collapseVodkas">
 								<div class="text-left p1 fz-1--5">
 									<div class="flex-rz space-between">
 										<p class="name arvo fz-1--1">SMIRNOFF</p>
@@ -5655,24 +5628,14 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-md-4"></div>
 						</div>
-					</div>
 
-					<!--MEZCÆLES-->
-					<div class="row">
-						<div class="col-md-4"></div>
+						<!--MEZCÆLES-->
 						<div class="col-11 col-md-4 px-0 text-center collapse-button">
 							<a class="collapse-button" data-toggle="collapse" href="#collapseMezcales" aria-expanded="true">
 								<img class="w-70 my-2em" src="https://pendulo.com/archivos/mezcales.png" alt="">
 							</a>
-						</div>
-						<div class="col-md-4"></div>
-					</div>
-					<div class="collapse show" id="collapseMezcales">
-						<div class="row">
-							<div class="col-md-4"></div>
-							<div class="col-md-4 text-center">
+							<div class="collapse show" id="collapseMezcales">
 								<div class="text-left p1 fz-1--5">
 									<div class="flex-rz space-between">
 										<p class="name arvo fz-1--1">PELOTON DE LA MUERTE</p>
@@ -5687,24 +5650,14 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-md-4"></div>
 						</div>
-					</div>
 
-					<!--TEQUILÆS-->
-					<div class="row">
-						<div class="col-md-4"></div>
+						<!--TEQUILÆS-->
 						<div class="col-11 col-md-4 px-0 text-center collapse-button">
 							<a class="collapse-button" data-toggle="collapse" href="#collapseTequilas" aria-expanded="true">
 								<img class="w-50 my-2em" src="https://pendulo.com/archivos/tequilas.png" alt="">
 							</a>
-						</div>
-						<div class="col-md-4"></div>
-					</div>
-					<div class="collapse show" id="collapseTequilas">
-						<div class="row">
-							<div class="col-md-4"></div>
-							<div class="col-md-4 text-center">
+							<div class="collapse show" id="collapseTequilas">
 								<div class="text-left p1 fz-1--5">
 									<div class="flex-rz space-between">
 										<p class="name arvo fz-1--1">CUERVO TRADICIONAL REPOSADO</p>
@@ -5737,24 +5690,14 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-md-4"></div>
 						</div>
-					</div>
 
-					<!--WHISKIÆS-->
-					<div class="row">
-						<div class="col-md-4"></div>
+						<!--WHISKIÆS-->
 						<div class="col-11 col-md-4 px-0 text-center collapse-button">
 							<a class="collapse-button" data-toggle="collapse" href="#collapseWhiskies" aria-expanded="true">
 								<img class="w-50 my-2em" style="max-width: 35%;" src="https://pendulo.com/archivos/whiskies.png" alt="">
 							</a>
-						</div>
-						<div class="col-md-4"></div>
-					</div>
-					<div class="collapse show" id="collapseWhiskies">
-						<div class="row">
-							<div class="col-md-4"></div>
-							<div class="col-md-4 text-center">
+							<div class="collapse show" id="collapseWhiskies">
 								<div class="text-left p1 fz-1--5">
 									<div class="flex-rz space-between">
 										<p class="name arvo fz-1--1">JOHNNIE WALKER RED</p>
@@ -5781,9 +5724,18 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-md-4"></div>
 						</div>
+
+
+
+
+
 					</div>
+
+
+
+<!--oñgtf2vb-->
+
 
 					<!--CREMÆS Y LICORES-->
 					<div class="row">
@@ -6998,7 +6950,7 @@
 								<div class="col-md-2"></div>
 							</div>
 						</div>
-						
+
 						<!--COCTELES OLD
 						<div class="col-12 col-md-4 px-0 text-center">
 							<a class="collapse-button" data-toggle="collapse" href="#collapseMargaritas"
