--- a/menu.html
+++ b/menu.html
@@ -1317,9 +1317,9 @@
 								<div class="collapse" id="collapseEntrada1">
 									<img src="./img/fotos/entradas-cabra.jpg" alt=""
 										style="width: 100%; margin: 10px 0;">
-									<p class="roboto-condensed brown-text mb-0">Rebanadas de queso de cabra empanizadas
-										y doradas al punto. Acompañadas de aguacate, sobre una cama de espinacas,
-										bañadas con vinagreta de ajonjoli y salpicadas con ajonjoli tostado.</p>
+									<p class="roboto-condensed brown-text mb-0">Rebanadas de queso de cabra empanizadas y doradas al punto. Acompañadas de
+										aguacate, sobre una cama de espinacas, bañadas con vinagreta de ajonjolí y salpicadas
+										con ajonjolí tostado.</p>
 								</div>
 							</div>
 						</div>
@@ -1344,8 +1344,8 @@
 								<div class="collapse" id="collapseEntrada2">
 									<img src="./img/fotos/entradas-empanaditas.jpg" alt=""
 										style="width: 100%; margin: 10px 0;">
-									<p class="roboto-condensed brown-text mb-0">Dos de queso, dos de rajas con queso y
-										dos de picadillo. Se sirven con salsa verde y crema.</p>
+									<p class="roboto-condensed brown-text mb-0">Dos de queso, dos de rajas con queso y dos de picadillo. Se sirven con salsa verde y
+										crema.</p>
 
 								</div>
 							</div>
@@ -1372,9 +1372,35 @@
 									<img src="./img/fotos/entradas-dedos.jpg" alt=""
 										style="width: 100%; margin: 10px 0;">
 
-									<p class="roboto-condensed brown-text mb-1--5">Dedos de queso gouda empanizados,
-										sobre un espejo de su elección de salsa verde al cilantro, salsa de tamarindo o
-										mixtos. Acompañados de papa paja al centro.</p>
+									<p class="roboto-condensed brown-text mb-1--5">Dedos de queso gouda empanizados, sobre un espejo de su elección de salsa verde al
+										cilantro, salsa de tamarindo o mixtos. Acompañados de papa paja al centro.</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md-4 text-center">
+							<div class="text-left p1 fz-1--5">
+								<div class="d-flex justify-content-between">
+									<a class="collapse-button" data-toggle="collapse" href="#collapseEntrada3"
+										role="button" aria-expanded="true" style="text-decoration: none;">
+										<p class="name arvo fz-1--1">CARPACCIO DE BETABEL ERDRICH</p>
+									</a>
+									<a class="collapse-button collapsed" data-toggle="collapse" href="#collapseEntrada3"
+										aria-expanded="true">
+										<i class="fa fa-plus"></i>
+									</a>
+								</div>
+								<div class="flex-rz space-between">
+									<p class="name roboto-condensed"><span class="mustache-text">270g</span></p>
+									<span class="line-1"></span>
+									<p class="name roboto-condensed"> $115</p>
+								</div>
+								<div class="collapse" id="collapseEntrada3">
+									<img src="./img/fotos/placeholder.png" alt=""
+										style="width: 100%; margin: 10px 0;">
+
+									<p class="roboto-condensed brown-text mb-1--5">Finas rodajas de betabel aderezadas con una vinagreta de miel y mostaza, acompañado
+										con arugula, queso feta y nuez.</p>
 								</div>
 							</div>
 						</div>
