avances comida desayuno postre bebidas

--- a/menu-ing.html
+++ b/menu-ing.html
@@ -3262,8 +3262,7 @@
 									<a class="collapse-button text-center" data-toggle="collapse"
 										href="#collapsePostres2" role="button" aria-expanded="true"
 										style="text-decoration: none;">
-										<img class="w-70 my-2em" src="https://pendulo.com/archivos/mini-postres.png"
-											alt="">
+										<img class="w-70 my-2em" src="https://pendulo.com/archivos/mini-postres.png" alt="">
 									</a>
 									<a class="collapse-button collapsed" data-toggle="collapse" href="#collapsePostres2"
 										aria-expanded="true">
@@ -3387,8 +3386,7 @@
 									<div class="collapse" id="collapsePostres6">
 										<img src="./img/fotos/postre-paidequeso.jpg" alt=""
 											style="width: 100%; margin: 10px 0;">
-										<p class="roboto-condensed brown-text mb-1--5">Pay de queso con nuez de
-											macadamia.</p>
+										<p class="roboto-condensed brown-text mb-1--5">Pay de queso con nuez de macadamia.</p>
 									</div>
 								</div>
 							</div>
