add two placeholders, last minute

--- a/menu.html
+++ b/menu.html
@@ -6231,7 +6231,7 @@
 											<p class="name roboto-condensed"> $120</p>
 										</div>
 										<div class="collapse" id="collapseTrad6">
-											<img src="./img/fotos/" alt=""
+											<img src="./img/fotos/placeholder.png" alt=""
 												style="width: 100%; margin: 10px 0;">
 												<p class="roboto-condensed brown-text mb-0">Jugo de coco con piña o maracuyá, con Smirnoff de tamarindo y escarchado con chamoy
 													de la casa.</p>
@@ -6259,7 +6259,7 @@
 											<p class="name roboto-condensed"> $95</p>
 										</div>
 										<div class="collapse" id="collapseTrad7">
-											<img src="./img/fotos/" alt=""
+											<img src="./img/fotos/placeholder.png" alt=""
 												style="width: 100%; margin: 10px 0;">
 												<p class="roboto-condensed brown-text mb-0">Refresco de toronja con Smirnoff de tamarindo, twist de limón, escarchado con chamoy
 													de la casa.</p>
