--- a/menu-ing.html
+++ b/menu-ing.html
@@ -6162,7 +6162,7 @@
 											<p class="name roboto-condensed"> $120</p>
 										</div>
 										<div class="collapse" id="collapseTrad6">
-											<img src="./img/fotos/" alt=""
+											<img src="./img/fotos/placeholder.png" alt=""
 												style="width: 100%; margin: 10px 0;">
 												<p class="roboto-condensed brown-text mb-0">Jugo de coco with piña o maracuyá, with Smirnoff de tamarindo y escarchado with chamoy
 													de la casa.</p>
@@ -6190,7 +6190,7 @@
 											<p class="name roboto-condensed"> $95</p>
 										</div>
 										<div class="collapse" id="collapseTrad7">
-											<img src="./img/fotos/" alt=""
+											<img src="./img/fotos/placeholder.png" alt=""
 												style="width: 100%; margin: 10px 0;">
 												<p class="roboto-condensed brown-text mb-0">Refresco de toronja with Smirnoff de tamarindo, twist de limón, escarchado with chamoy
 													de la casa.</p>
