nuevos cambios start

--- a/menu-ing.html
+++ b/menu-ing.html
@@ -31,8 +31,7 @@
 			</div>
 			<div id="menu-items" class="col-md-12">
 				<span class="center-center">
-					<a class="z-5" href="index.html"><span><i class="fas fa-arrow-left"></span></i></a>
-					<h2 class="subtitle-4">MENÚ</h2>
+					<a class="z-5 d-flex items-center" style="text-decoration: none;" href="index.html"><span><i class="fas fa-arrow-left"></span></i><h2 class="subtitle-4">MENÚ</h2></a>
 				</span>
 				<div class="center-center pb-5">
 					<span class="mx-10px">
