--- a/menu.html
+++ b/menu.html
@@ -23,7 +23,10 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
-				<img class="logo-1" src="img/logo0.png" alt="">
+				<a class="logo-img" href="index.html" >
+					<img class="logo-1" src="img/logo0.png" alt="">
+				</a>
+				
 				<div class="header_language-buttons-2">
 					<button class="btn-lang-on" id="esp" type="button">ESP</button>
 					<button class="btn-lang-off" id="eng" onclick="location.href='menu-ing.html'" type="button">ENG</button>
@@ -31,24 +34,23 @@
 			</div>
 			<div id="menu-items" class="col-md-12">
 				<span class="center-center">
-					<a class="z-5" href="index.html"><span><i class="fas fa-arrow-left"></span></i></a>
-					<h2 class="subtitle-4">MENÚ</h2>
+					<a class="z-5 d-flex items-center" style="text-decoration: none;" href="index.html"><span><i class="fas fa-arrow-left"></span></i><h2 class="subtitle-4">MENÚ</h2></a>
 				</span>
 				<div class="center-center pb-5">
-					<span class="mx-10px">
+					<span class="mx-10px d-flex items-baseline">
 						<img class="pr-5px" src="https://pendulo.com/archivos/d1.png" alt="">
 						<p class="bebas contents fz-1--5">Nuevo</p>
 					</span>
-					<span class="mx-10px">
+					<span class="mx-10px d-flex items-center">
 						<img class="pr-5px" src="https://pendulo.com/archivos/d2.png" alt="">
 						<p class="bebas contents fz-1--5">Vegetariano</p>
 					</span>
-					<span class="mx-10px">
+					<span class="mx-10px d-flex items-baseline">
 						<img class="pr-5px" src="https://pendulo.com/archivos/d3.png" alt="">
 						<p class="bebas contents fz-1--5">Light</p>
 					</span>
-					<span class="mx-10px">
-						<img class="pr-5px" src="https://pendulo.com/archivos/d4.png" alt="">
+					<span class="mx-10px d-flex items-baseline">
+						<img class="pr-5px" src="https://pendulo.com/archivos/d5.png" alt="">
 						<p class="bebas contents fz-1--5">Nueva Receta</p>
 					</span>
 				</div>
@@ -117,7 +119,7 @@
 									</p>
 								</div>
 								<div class="collapse" id="collapseJugo3">
-									<img src="./img/fotos/sandwich-california.jpg" alt=""
+									<img src="./img/fotos/jugos-narahoria.jpg" alt=""
 										style="width: 100%; margin: 10px 0;">
 									<p class="roboto-condensed brown-text m0">Naranja y zanahoria.</p>
 								</div>
@@ -145,7 +147,7 @@
 									</p>
 								</div>
 								<div class="collapse" id="collapseJugo4">
-									<img src="./img/fotos/sandwich-california.jpg" alt=""
+									<img src="./img/fotos/jugos-rojo-revitalizaante.jpg" alt=""
 										style="width: 100%; margin: 10px 0;">
 									<p class="roboto-condensed brown-text m0">Jugo de zanahoria, betabel, manzana roja,limón y jengibre.</p>
 								</div>
@@ -173,7 +175,7 @@
 									</p>
 								</div>
 								<div class="collapse" id="collapseJugo5">
-									<img src="./img/fotos/sandwich-california.jpg" alt=""
+									<img src="./img/fotos/jugos-naturales.jpg" alt=""
 										style="width: 100%; margin: 10px 0;">
 									<p class="roboto-condensed brown-text m0">Naranja, toronja o zanahoria.</p>
 								</div>
@@ -184,9 +186,9 @@
 								<div class="d-flex justify-content-between">
 									<a class="collapse-button" data-toggle="collapse" href="#collapseJugo6"
 										role="button" aria-expanded="true" style="text-decoration: none;">
-										<div class="flex-rz space-between">
-											<p class="name-wrap arvo flex-start">CLAMATO NATURAL <img class="ml-5px"
-												src="https://pendulo.com/archivos/d1.png" alt=""></p>
+										<div class="flex-rz space-between items-baseline">
+											<p class="name-wrap arvo flex-start">CLAMATO NATURAL </p>
+											<img class="ml-5px" src="https://pendulo.com/archivos/d1.png" alt="">
 										</div>
 									</a>
 									<a class="collapse-button collapsed" data-toggle="collapse"
@@ -200,31 +202,37 @@
 									<p class="name roboto-condensed"> $66</p>
 								</div>
 								<div class="collapse" id="collapseJugo6">
-									<img src="./img/fotos/sandwich-california.jpg" alt=""
+									<img src="./img/fotos/jugos-clamato.jpg" alt=""
 										style="width: 100%; margin: 10px 0;">
 									<p class="roboto-condensed brown-text m0">Clásico y refrescante a base de concentrado de jugo de tomate, almeja y especias.</p>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-4 text-center">
-							<div class="bg-green-light p1 fz-1--5">
-								<p class="title-green">VERDE QUE TE <br> QUIERO VERDE</p>
+							<div class="text-left p1 fz-1--5">
 								<div class="d-flex justify-content-between">
-									<a class="collapse-button" data-toggle="collapse" href="#collapseJugo7" role="button" aria-expanded="true" style="text-decoration: none;">
-										<p class="name arvo fz-1--1">EL VERDE WHITMAN</p>
+									<a class="collapse-button" data-toggle="collapse" href="#collapseJugo7"
+										role="button" aria-expanded="true" style="text-decoration: none;">
+										<div class="flex-rz space-between">
+											<p class="name-wrap arvo flex-start">EL VERDE WHITMAN</p>
+										</div>
 									</a>
-									<a class="collapse-button collapsed" data-toggle="collapse" href="#collapseJugo7" aria-expanded="true">
+									<a class="collapse-button collapsed" data-toggle="collapse"
+										href="#collapseJugo7" aria-expanded="true">
 										<i class="fa fa-plus"></i>
 									</a>
 								</div>
 								<div class="flex-rz space-between">
-									<p class="name roboto-condensed">CHICO <span class="mustache-text">300 ml</span> $60</p>
+									<p class="name roboto-condensed">CHICO <span class="mustache-text">300 ml</span> $60
+									</p>
 									<span class="line-1"></span>
-									<p class="name roboto-condensed">GRANDE <span class="mustache-text">500 ml</span> $70</p>
+									<p class="name roboto-condensed">GRANDE <span class="mustache-text">500 ml</span> $70
+									</p>
 								</div>
 								<div class="collapse" id="collapseJugo7">
-									<img src="./img/fotos/botanas-tablita.jpg" alt="" style="width: 100%; margin-bottom: 10px;">
-									<p class="roboto-condensed brown-text">Jugo de espinaca, apio, manzana, pepino, naranja, limón y jengibre.</p>
+									<img src="./img/fotos/placeholder.png" alt=""
+										style="width: 100%; margin: 10px 0;">
+									<p class="roboto-condensed brown-text m0">Jugo de espinaca, apio, manzana, pepino, naranja, limón y jengibre.</p>
 								</div>
 							</div>
 						</div>
@@ -388,7 +396,10 @@
 								<div class="d-flex justify-content-between">
 									<a class="collapse-button" data-toggle="collapse" href="#collapseEmpezar8"
 										role="button" aria-expanded="true" style="text-decoration: none;">
-										<p class="name arvo fz-1--1">QUESO PANELA ASADO <img class="ml-5px" src="https://pendulo.com/archivos/d4.png" alt=""></p>
+										<div class="flex-rz space-between items-baseline">
+											<p class="name arvo fz-1--1">QUESO PANELA ASADO </p>
+											<img class="ml-5px" src="https://pendulo.com/archivos/d5.png" alt="">
+										</div>
 									</a>
 									<a class="collapse-button collapsed" data-toggle="collapse" href="#collapseEmpezar8"
 										aria-expanded="true">
@@ -414,7 +425,10 @@
 								<div class="d-flex justify-content-between">
 									<a class="collapse-button" data-toggle="collapse" href="#collapseEmpezar9"
 										role="button" aria-expanded="true" style="text-decoration: none;">
-										<p class="name arvo fz-1--1">SIMON & GARFUNKEL TOASTS <img class="ml-5px" src="https://pendulo.com/archivos/d1.png" alt=""></p>
+										<div class="flex-rz space-between items-baseline">
+											<p class="name arvo fz-1--1">SIMON & GARFUNKEL TOASTS </p>
+											<img class="ml-5px" src="https://pendulo.com/archivos/d1.png" alt="">
+										</div>
 									</a>
 									<a class="collapse-button collapsed" data-toggle="collapse" href="#collapseEmpezar9"
 										aria-expanded="true">
@@ -638,13 +652,10 @@
 								<div class="d-flex justify-content-between">
 									<a class="collapse-button" data-toggle="collapse" href="#collapseHC1"
 										role="button" aria-expanded="true" style="text-decoration: none;">
-										<div class="flex-rz space-between">
-											<p class="name-wrap arvo flex-start">HOT CAKES<img class="ml-5px" src="https://pendulo.com/archivos/d4.png" alt=""></p>
+										<div class="flex-rz space-between items-baseline">
+											<p class="name-wrap arvo flex-start">HOT CAKES </p>
+											<img class="ml-5px" src="https://pendulo.com/archivos/d5.png" alt="">
 										</div>
-									</a>
-									<a class="collapse-button collapsed" data-toggle="collapse"
-										href="#collapseHC1" aria-expanded="true">
-										<i class="fa fa-plus"></i>
 									</a>
 								</div>
 								<div class="flex-rz space-between">
@@ -669,8 +680,7 @@
 					<div class="col-md-4 text-center">
 						<div class="row">
 							<div class="col-12">
-								<a class="collapse-button" data-toggle="collapse" href="#collapsePanFrances"
-									aria-expanded="true">
+								<a class="collapse-button" data-toggle="collapse" href="#collapsePanFrances" aria-expanded="true">
 									<img class="w-60 my-2em" src="https://pendulo.com/archivos/hot-cakes2.png" alt="">
 								</a>
 							</div>
@@ -680,8 +690,9 @@
 								<div class="d-flex justify-content-between">
 									<a class="collapse-button" data-toggle="collapse" href="#collapsePF1"
 										role="button" aria-expanded="true" style="text-decoration: none;">
-										<div class="flex-rz space-between">
-											<p class="name-wrap arvo flex-start">PAN FRANCÉS<img class="ml-5px" src="https://pendulo.com/archivos/d4.png" alt=""></p>
+										<div class="flex-rz space-between items-baseline">
+											<p class="name-wrap arvo flex-start">PAN FRANCÉS </p>
+											<img class="ml-5px" src="https://pendulo.com/archivos/d5.png" alt="">
 										</div>
 									</a>
 									<a class="collapse-button collapsed" data-toggle="collapse"
@@ -1061,7 +1072,6 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-md-4 text-center"></div>
 						<div class="col-md-4 text-center">
 							<div class="text-left p1 fz-1--5">
 								<div class="d-flex justify-content-between">
@@ -1090,7 +1100,6 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-md-4 text-center"></div>
 					</div>
 				</div>
 
@@ -1183,10 +1192,10 @@
 								<div class="d-flex justify-content-between">
 									<a class="collapse-button" data-toggle="collapse" href="#collapseBrunch3"
 										role="button" aria-expanded="true" style="text-decoration: none;">
-										<div class="flex-rz space-between">
-											<p class="name-wrap arvo flex-start">EL MISTRAL DE TRES QUESOS<img
-													class="ml-5px" src="https://pendulo.com/archivos/d2.png" alt=""><img
-													class="ml-5px" src="https://pendulo.com/archivos/d4.png" alt=""></p>
+										<div class="flex-rz space-between items-baseline">
+											<p class="name-wrap arvo flex-start">EL MISTRAL DE TRES QUESOS </p>
+											<img class="ml-5px" src="https://pendulo.com/archivos/d2.png" alt="">
+											<img class="ml-5px" src="https://pendulo.com/archivos/d5.png" alt="">
 										</div>
 									</a>
 									<a class="collapse-button collapsed" data-toggle="collapse"
@@ -1248,10 +1257,12 @@
 						<div class="col-md-4 text-center">
 							<div class="text-left p1 fz-1--5">
 								<div class="d-flex justify-content-between">
+									
 									<a class="collapse-button" data-toggle="collapse" href="#collapseBrunch5"
-										role="button" aria-expanded="true" style="text-decoration: none; width: 95%;">
-										<div class="flex-rz space-between">
-											<p class="name arvo flex-start">TABLITA MEXICANA <img class="ml-5px" src="https://pendulo.com/archivos/d4.png" alt=""></p>
+										role="button" aria-expanded="true" style="text-decoration: none;">
+										<div class="flex-rz space-between items-baseline">
+											<p class="name arvo flex-start">TABLITA MEXICANA </p>
+											<img class="ml-5px" src="https://pendulo.com/archivos/d5.png" alt="">
 										</div>
 									</a>
 									<a class="collapse-button collapsed" data-toggle="collapse"
@@ -1379,7 +1390,10 @@
 								<div class="d-flex justify-content-between">
 									<a class="collapse-button" data-toggle="collapse" href="#collapseEntrada4"
 										role="button" aria-expanded="true" style="text-decoration: none;">
-										<p class="name arvo fz-1--1">CARPACCIO DE BETABEL ERDRICH <img class="ml-5px" src="https://pendulo.com/archivos/d1.png" alt=""></p>
+										<div class="flex-rz space-between items-baseline">
+											<p class="name arvo fz-1--1">CARPACCIO DE BETABEL ERDRICH </p>
+											<img class="ml-5px" src="https://pendulo.com/archivos/d1.png" alt="">
+										</div>
 									</a>
 									<a class="collapse-button collapsed" data-toggle="collapse" href="#collapseEntrada4"
 										aria-expanded="true">
@@ -1713,8 +1727,10 @@
 								<div class="d-flex justify-content-between">
 									<a class="collapse-button" data-toggle="collapse" href="#collapsePasta1"
 										role="button" aria-expanded="true" style="text-decoration: none;">
-										<p class="name arvo fz-1--1 flex-start">LASSAGNA FO<img class="ml-5px"
-												src="https://pendulo.com/archivos/d2.png" alt=""></p>
+										<div class="flex-rz space-between items-baseline">
+											<p class="name arvo fz-1--1 flex-start">LASSAGNA FO </p>
+											<img class="ml-5px" src="https://pendulo.com/archivos/d2.png" alt="">
+										</div>
 									</a>
 									<a class="collapse-button collapsed" data-toggle="collapse" href="#collapsePasta1"
 										aria-expanded="true">
@@ -1740,8 +1756,10 @@
 								<div class="d-flex justify-content-between">
 									<a class="collapse-button" data-toggle="collapse" href="#collapsePasta2"
 										role="button" aria-expanded="true" style="text-decoration: none;">
-										<p class="name arvo fz-1--1-start">PASTA AL GUSTO<img class="ml-5px"
-												src="https://pendulo.com/archivos/d2.png" alt=""></p>
+										<div class="flex-rz space-between items-baseline">
+											<p class="name arvo fz-1--1 flex-start">PASTA AL GUSTO </p>
+											<img class="ml-5px" src="https://pendulo.com/archivos/d2.png" alt="">
+										</div>
 									</a>
 									<a class="collapse-button collapsed" data-toggle="collapse" href="#collapsePasta2"
 										aria-expanded="true">
@@ -1767,8 +1785,10 @@
 								<div class="d-flex justify-content-between">
 									<a class="collapse-button" data-toggle="collapse" href="#collapsePasta3"
 										role="button" aria-expanded="true" style="text-decoration: none;">
-										<p class="name arvo fz-1--1 flex-start">RAVIOLES CARROLL<img class="ml-5px"
-												src="https://pendulo.com/archivos/d2.png" alt=""></p>
+										<div class="flex-rz space-between items-baseline">
+											<p class="name arvo fz-1--1 flex-start">RAVIOLES CARROLL </p>
+											<img class="ml-5px" src="https://pendulo.com/archivos/d2.png" alt="">
+										</div>
 									</a>
 									<a class="collapse-button collapsed" data-toggle="collapse" href="#collapsePasta3"
 										aria-expanded="true">
@@ -1793,8 +1813,10 @@
 								<div class="d-flex justify-content-between">
 									<a class="collapse-button" data-toggle="collapse" href="#collapsePasta4"
 										role="button" aria-expanded="true" style="text-decoration: none;">
-										<p class="name-wrap arvo flex-start">FETUCCINI DE CALABAZA BEATNIK<img
-												class="ml-5px" src="https://pendulo.com/archivos/d2.png" alt=""></p>
+										<div class="flex-rz space-between items-baseline">
+											<p class="name arvo fz-1--1 flex-start">FETUCCINI DE CALABAZA BEATNIK </p>
+											<img class="ml-5px" src="https://pendulo.com/archivos/d2.png" alt="">
+										</div>
 									</a>
 									<a class="collapse-button collapsed" data-toggle="collapse" href="#collapsePasta4"
 										aria-expanded="true">
@@ -1820,7 +1842,10 @@
 								<div class="d-flex justify-content-between">
 									<a class="collapse-button" data-toggle="collapse" href="#collapsePasta5"
 										role="button" aria-expanded="true" style="text-decoration: none;">
-										<p class="name arvo fz-1--1 flex-start">CANELONES CAMILLERI<img class="ml-5px" src="https://pendulo.com/archivos/d1.png" alt=""></p>
+										<div class="flex-rz space-between items-baseline">
+											<p class="name arvo fz-1--1 flex-start">CANELONES CAMILLERI </p>
+											<img class="ml-5px" src="https://pendulo.com/archivos/d1.png" alt="">
+										</div>
 									</a>
 									<a class="collapse-button collapsed" data-toggle="collapse" href="#collapsePasta5"
 										aria-expanded="true">
@@ -2115,17 +2140,16 @@
 									<p class="name-wrap arvo">MISTRAL DE TRES QUESOS</p>
 								</li>
 								<li>
-									<p class="name arvo">CHAPATA ORIENTAL (Se sirve
-										únicamente en chapata de arándano
-										o multigrano sin guarnición)</p>
+									<p class="name arvo">CHAPATA ORIENTAL*</p>
 								</li>
 							</ul>
 						</div>
 						<div class="col-md-2"></div>
 						<div class="col-md-2"></div>
 						<div class="col-md-8 text-center">
-							<p class="roboto-condensed brown-text mb-1--5 fz-1--5">Nuestros Sándwiches se sirven en el pan de su elección: Baguette de centeno negro,
+							<p class="roboto-condensed brown-text fz-1--5">Nuestros Sándwiches se sirven en el pan de su elección: Baguette de centeno negro,
 								pan blanco, pan de anís, chapata multigrano o chapata a arándano. Acompañados de papas a la francesa o ensalada de jícama, pepino y zanahoria.</p>
+							<p class="roboto-condensed brown-text mb-1--5 fz-1--5">*Se sirve únicamente en chapata de arándano o multigrano sin guarnición</p>
 						</div>
 						<div class="col-md-2"></div>
 					</div>
@@ -4903,14 +4927,14 @@
 								<div class="collapse" id="collapseOtr1">
 									<img src="./img/fotos/refrescos.jpg" alt=""
 										style="width: 100%; margin: 10px 0;">
-									<p class="roboto-condensed brown-text m0">Coca Cola, Coca Cola Light, Coca-Cola sin azúcar, agua mineral, Sprite, Sprite Zero,
+									<p class="roboto-condensed brown-text m0">Coca-Cola, Coca-Cola Light, Coca-Cola sin azúcar, agua mineral, Sprite, Sprite Zero,
 										Sidral, Sidral light y Fanta de naranja.</p>
 								</div>
 
 								<div class="d-flex justify-content-between">
 									<a class="collapse-button" data-toggle="collapse" href="#collapseOtr2" role="button" aria-expanded="true" style="text-decoration: none; width: 100%; margin-right: 10px;">
 										<div class="flex-rz space-between">
-											<p class="name-wrap arvo flex-start">TOPO CHICO AGUA MINERAL <img class="ml-5px" src="https://pendulo.com/archivos/d1.png" alt=""></p>
+											<p class="name arvo flex-start">TOPO CHICO AGUA MINERAL <img class="ml-5px" src="https://pendulo.com/archivos/d1.png" alt=""></p>
 											<span class="line-1"></span>
 											<p class="name roboto-condensed"><span class="mustache-text pr-5px">355 ml </span>$55</p>
 										</div>
